refactor: Agruping in packages and refactoring