@@ -1,10 +1,13 @@
-package edu.badpals.stockx;
+package edu.badpals.stockx.Criteria;
+
+import edu.badpals.stockx.Criteria.Criteria;
+import edu.badpals.stockx.item.Item;
+import edu.badpals.stockx.offer.Offer;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
-public class Size implements Criteria{
+public class Size implements Criteria {
     private final String size;
     public Size(String size){
         this.size = size;
@@ -14,6 +17,6 @@ public class Size implements Criteria{
     public List<Offer> checkCriteria(Item item) {
         return item.offers().stream()
                 .filter(i-> Objects.equals(i.size(), this.size))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
